# fidelitas

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  elm-make.rs  elm.json  index.html
.cargo/: config
.github/workflows/: armv7-unknown-linux-gnueabihf.yml  create_release.yml  x86_64-pc-windows-gnu.yml  x86_64-pc-windows-gnu.yml.broken  x86_64-pc-windows-msvc.yml  x86_64-pc-windows-tbd.yml  x86_64-unknown-linux-gnu.yml
dockerfiles/: cross-x86_64-pc-windows-gnu.Dockerfile  fidelitas-cross-armv7.Dockerfile
docs/: book.toml
docs/content/: SUMMARY.md
docs/content/protocols/: messages-client.md  messages-intro.md  messages-server.md
elm-src/: Main.elm
elm-src/Messages/: In.elm  Out.elm
lib/: README.md
lib/iphlpapi.lib.LICENSES/: .~lock.sdk_license.rtf#  REDIST.TXT
scripts/: elm-make.sh  fix-minggw.sh
src/: httpapi.rs  main.rs  media_fs.rs  network_interfaces.rs  vlc_helpers.rs  websocket.rs
static/: .gitignore  oldplayer.css  player.css
templates/: index.html
