[package]
name = "fidelitas"
version = "0.1.0"
authors = ["Nicolas Mohr <Nico.Mohr@gmx.net>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0"
actix-files = "0.1.4"
actix-web-actors = "1.0.2"

vlc-rs = "0.3"

crossbeam-channel = "0.3.9"
crossbeam-utils = "0.6"

clap = "~2.33.0"

lazy_static = "1.4.0"

regex = "1"

serde = "1.0"
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
ifaces = "0.1.0"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2.1"